infrastructure/configs/the-intersect/katalog/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: katalog
  labels:
    shared-gateway-access: "true"
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
